--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <h2>Slap The Bear</h2>
     </div>
   </section>
+
+  <!-- bellow dynamic -->
   <main class="row custom-height ">
     <div class="col d-flex flex-column justify-content-end">
       <div class="row">
@@ -68,6 +70,8 @@
       <button id="reset" type="button" class=" btn btn-sm bg-dark text-white">Reset</button>
     </div>
   </footer>
+  <!-- above dynamic -->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script type="module" src="app/main.js"></script>
